[gd_scene load_steps=48 format=2]

[ext_resource path="res://Assets/Player/player_16_2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/reactor-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/player_fill-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Propulsion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Player/shield.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/shot_basic_feedback.png" type="Texture" id=7]
[ext_resource path="res://Assets/SFX/shield_off.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Player/shield-Sheet.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Player.material" type="Material" id=10]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 17, -17, 1, 17, -1, 17, -17, -17, 0, -8 )

[sub_resource type="CircleShape2D" id=16]
custom_solver_bias = 1.0

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=58]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("player_spr:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=59]
resource_name = "Spawn"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("player_spr:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 2.3, 2.3 ), Vector2( 1.9, 1.9 ), Vector2( 2, 2 ) ]
}

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=60]
animations = [ {
"frames": [ SubResource( 46 ), SubResource( 46 ), null, null, null, SubResource( 46 ), SubResource( 46 ), null, null, null, SubResource( 46 ), SubResource( 46 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[node name="Player" type="RigidBody2D"]
mode = 2
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.5
angular_damp = 2.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -26 )
scale = Vector2( 2, 2 )
frames = SubResource( 30 )
playing = true

[node name="player_spr" type="Sprite" parent="."]
material = ExtResource( 10 )
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 15 )

[node name="CollisionShapeShield" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
scale = Vector2( 2.7, 2.7 )
shape = SubResource( 16 )
disabled = true

[node name="shield_spr" type="Sprite" parent="CollisionShapeShield"]
visible = false
scale = Vector2( 0.740741, 0.740741 )
texture = ExtResource( 6 )

[node name="AS_shield_spr" type="AnimatedSprite" parent="CollisionShapeShield"]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 25 )

[node name="Propulsion" parent="." instance=ExtResource( 5 )]

[node name="AS_shoot_basic" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 48 )
rotation = 3.14159
scale = Vector2( 2, 2 )
frames = SubResource( 36 )
frame = 3

[node name="AS_hold_shoot" type="AnimatedSprite" parent="."]
rotation = 3.14159
scale = Vector2( 2, 2 )
frames = SubResource( 47 )

[node name="TimerCoolDown" type="Timer" parent="."]
wait_time = 0.75

[node name="shield_off" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 4.0
bus = "SFX"

[node name="TimerInvulnerability" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 58 )
anims/Spawn = SubResource( 59 )

[node name="AS_spawn" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
frames = SubResource( 60 )
flip_v = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="animation_finished" from="CollisionShapeShield/AS_shield_spr" to="." method="_on_AS_shield_spr_animation_finished"]
[connection signal="animation_finished" from="AS_shoot_basic" to="." method="_on_AS_shoot_basic_animation_finished"]
[connection signal="timeout" from="TimerCoolDown" to="." method="_on_TimerCoolDown_timeout"]
[connection signal="timeout" from="TimerInvulnerability" to="." method="_on_TimerInvulnerability_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AS_spawn" to="." method="_on_AS_spawn_animation_finished"]
